exports[`TextFieldValidated [common] example testing should match snapshot for basic 1`] = `
<TextFieldValidated
  Error="Nope, not even close!"
  debounceLevel={500}
  isDisabled={false}
  isMultiLine={false}
  lazyLevel={1000}
  onBlur={[Function]}
  onChange={[Function]}
  onChangeDebounced={[Function]}
  onSubmit={[Function]}
  rows={5}
  style={null} />
`;

exports[`TextFieldValidated [common] example testing should match snapshot for debounced 1`] = `
<div>
  <TextFieldValidated
    Error="Please enter \"foo\""
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onSubmit={[Function]}
    rows={5}
    style={null}
    value="" />
  <div
    style={
      Object {
        "marginBottom": "10px",
      }
    }>
    state.value: 
  </div>
</div>
`;
